first steps
corda network brought up once

typos

more progress

more work

add ci test for corda

remove fabric step from corda tests

build interop before iin

add github.properties files before building

need jdk 17

build under ci

bad update

work in ci

mistaken commit

need to deploy contracts to connector

use hyperledger login

try turning on ssh port

latest issue

change to relative path

add ssh for party A

update port

add docker compose

show error in ci

pull jars from ledger

invalid packet length

add script for peter

update to random cccs version

add endpoint to add jars without deploying them

cant invoke long

yay green

towards lock implementation - incomplete

towards lock implementation (incomplete)

data types too complex

yay can serialize lock params

run lock test in ci

why is fabric network creation failing

fix issue with build

issue with corda test

print reason for error

issue with file move

mysteriously not working

try loading jar file

build fungible house token in setup

force local versions of libraries

force local versions of libraries

try passing custom serializers as whitelist

uh-oh serializer types are cast down

like last

try using jar again

try compiling with weaver contracts on connector

try adding serializers to corda connector

update after rebase

generate full corda command set

lock test green locally

build corda server in ci

make protos lib

working with local transaction

post rebase issues

yay green

close http server

add nft lock and claim

add verified view test

pledge-claim working

move pledge and claim params to validator

verify working

fix makefile issue

make pledge and view tests more generic

refactor

refactor

unfinished test reorg

issues post rebase

change command names to be unique

make fabric testenv generic

mover server creation to tester

tests working in test tooling dir

pass network types in env

pledge and view working on same networks

corda to fabric pledge claim working
